AC_INIT(src)
AM_CONFIG_HEADER(include/config.h)
AM_INIT_AUTOMAKE(run-free, 1.0.0)
##
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
##
AC_OUTPUT(Makefile \
include/Makefile \
src/Makefile \
src/run_free/Makefile \
src/kbhit/Makefile )
##
##
echo ""
echo "--- Now run make, binaries will be in ./bin ---"
echo ""
